<resources>
    <string name="app_name">Lab2Activity</string>
    <string name="title_activity_ndrestaurant">NDRestaurant</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    //Plates and Drinks
    <string name="hintNombrePlato">Ingrese nombre del plato</string>
    <string name="checkBoxManana">Mañana</string>
    <string name="checkBoxTarde">Tarde</string>
    <string name="checkBoxNoche">Noche</string>
    <string name="labelTipoPlato">Tipo de plato</string>
    <string name="radioBtnEntrada">Entrada</string>
    <string name="radioBtnPlatoFuerte">Plato fuerte</string>
    <string name="labelPrecio">Precio</string>
    <string name="hintPrecio">0</string>
    <string name="hintIngredientes">Ingrese ingredientes ej: papa, huevo</string>
    <string name="btnAgregarPlato">Agregar</string>
    <string name="txtTiempoPlato">Tiempo de Preparación</string>
    <string name="txtIngredientes">Ingredientes</string>
    <string name="hintNombreBebida">Ingrese nombre de la bebida</string>
    <string name="labelPrecioBebida">Precio</string>
    <string name="btnAgregarBebida">Agregar</string>
    <string name="btnRegristrarPlato">Añadir Plato</string>
    <string name="btnRegistrarBebida">Añadir Bebida</string>
    <string name="itemMenuBorrar">Borrrar</string>
    <string name="itemMenuSalir">Salir</string>


    <string name="txtNombreRestaurante">Aunt Daisys</string>
    <string name="txtSlogan">Main Street Diner</string>

    //Navigation Drawer
    <string name="txtNDPlatos">Platos</string>
    <string name="txtNDBebidas">Bebidas</string>
    <string name="txtNDPerfil">Perfil</string>
    <string name="txtNDConfiguration">Configuración</string>
    <string name="txtNDLogOut">Cerrar sesión</string>
    <string name="txtNDAbout">Acerca de</string>

    //User
    <string name="hintContraseñaUsuario">Contraseña</string>
    <string name="hintNombreUsuario">Nombre de usuario</string>
    <string name="btnIngresarUsuario">Ingresar</string>
    <string name="btnCrearCuentaUsuario">Crear cuenta</string>
    <string name="hintEmailRegistrarUsuario">ejemplo@gmail.com</string>
    <string name="btnRegistrarUsuario">Registrate</string>

    //Profile
    <string name="titleProfile">Mi Perfil</string>


</resources>
