<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="co.edu.udea.compumovil.gr02_20181.lab2.StartLoginFragment">

    <!-- TODO: Update blank fragment layout -->

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <EditText
            android:id="@+id/txt_nameUser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:ems="10"
            android:hint="@string/hintNombreUsuario"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.503"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout_editor_absoluteY="158dp" />

        <EditText
            android:id="@+id/txt_passwordUser"
            android:layout_width="wrap_content"
            android:layout_height="51dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="24dp"
            android:ems="10"
            android:hint="password"
            android:inputType="textPassword"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.503"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_nameUser" />

        <Button
            android:id="@+id/btn_SignIn"
            android:layout_width="126dp"
            android:layout_height="47dp"
            android:layout_marginBottom="140dp"
            android:layout_marginEnd="64dp"
            android:layout_marginStart="24dp"
            android:backgroundTint="@color/colorAccent"
            android:text="@string/btnIngresarUsuario"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/btn_createAccountUser" />

        <Button
            android:id="@+id/btn_createAccountUser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="52dp"
            android:backgroundTint="@color/colorAccent"
            android:text="@string/btnCrearCuentaUsuario"
            app:layout_constraintBaseline_toBaselineOf="@+id/btn_SignIn"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/btn_SignIn"
            android:layout_marginEnd="21dp" />

    </android.support.constraint.ConstraintLayout>

</FrameLayout>
